# cmake_tester

./: .gitignore  CMakeLists.txt  README.md  TestEnvironment.cpp  TestEnvironment.h
tester/: CMakeLists.txt
tests/: .config.txt.swp  CMakeLists.txt  CMakeLists.txt.save  config.txt
util/: CMakeLists.txt  base_filter.cpp  base_filter.h  config.txt  convolution.h  image_data.h  main.cpp  png_toolkit.cpp  png_toolkit.h  red_filter.h  threshold.h
